# tensor-networks

./: .flake8  .gitignore  makefile  mypy.ini  pyproject.toml  pytest.ini
examples/dummy_gradient/: 2x2-gradients.mat  dummy_gradient.py  generate_data.py
examples/mnist/: display_random_mnist.py  mnist-14x14.mat  mnist-28x28.mat  mnist-7x7.mat  mnist.py  shrink_data.py
examples/utils/: greyscale_image.py  io.py  results.py
tensor_networks/: annotations.py  classification.py  contraction.py  decomposition.py  inputs.py  patched_numpy.py  tensor_train.py  training.py  transposition.py  utils.py  weights.py
tests/: helpers.py  test_svd.py  test_tensor_train.py  test_training.py  test_transposition.py
