[tool.poetry]
name = "tensor_networks"
version = "0.0.1"
description = ""
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
matplotlib = "*"
pillow-simd = "*"
scipy = "*"
numpy-stubs = { git = "https://github.com/numpy/numpy-stubs.git" }
more-itertools = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
